setup_cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: python-app
  labels:
    istio-injection: enabled
